--- a/aboutus.html
+++ b/aboutus.html
@@ -249,16 +249,16 @@
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingAlberto">
+                        <div class="panel-heading" role="tab" id="headingAman">
                             <h3 class="panel-title">
                                 <a class="collapsed" role="button" data-toggle="collapse"
-                                     data-parent="#accordion" href="#alberto"
-                                     aria-expanded="false" aria-controls="alberto">
+                                     data-parent="#accordion" href="#aman"
+                                     aria-expanded="false" aria-controls="aman">
                                     Alberto Somayya <small>Executive Chef</small></a>
                             </h3>
                         </div>
                         <div role="tabpanel" class="panel-collapse collapse"
-                             id="alberto"    aria-labelledby="headingAlberto">
+                             id="aman"    aria-labelledby="headingAman">
                             <div class="panel-body">
                                 <p> Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                             </div>
